--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -91,5 +91,6 @@
 				<category android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
 		</activity>
+		<service android:name="org.tomahawk.libtomahawk.network.TomahawkService" android:label="@string/app_name"></service>
     </application>
 </manifest>
